--- a/app/src/main/res/layout/activity_rent.xml
+++ b/app/src/main/res/layout/activity_rent.xml
@@ -6,13 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".RentActivity">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/nameText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </com.google.android.material.textfield.TextInputLayout>
-
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/nameTextEdit"
         android:layout_width="248dp"
@@ -25,13 +18,6 @@
         android:layout_marginEnd="150dp"
         android:hint="@string/nameText"
         android:textColorHint="#616161" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/surnameText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/surnameTextEdit"
@@ -46,13 +32,6 @@
         android:hint="@string/surnameText"
         android:textColorHint="#757575" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/addressText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </com.google.android.material.textfield.TextInputLayout>
-
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/addressTextEdit"
         android:layout_width="248dp"
@@ -65,12 +44,105 @@
         android:layout_marginEnd="150dp"
         android:hint="@string/addressText"
         android:textColorHint="#757575" />
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/numberTextEdit"
+        android:layout_width="248dp"
+        android:layout_height="58dp"
+        android:layout_below="@+id/addressTextEdit"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="150dp"
+        android:hint="@string/numberText"
+        android:textColorHint="#757575" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/numberText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/termText"
+        android:layout_width="wrap_content"
+        android:layout_height="29dp"
+        android:layout_below="@+id/numberTextEdit"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="13dp"
+        android:text="@string/termText" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/termText"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="13dp"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/termText"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="150dp"
+        android:text="TextView" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="13dp"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView7"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="150dp"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="300dp"
+        android:layout_height="58dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="63dp"
+        android:layout_marginBottom="13dp"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="300dp"
+        android:layout_height="58dp"
+        android:layout_above="@+id/button4"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="63dp"
+        android:layout_marginBottom="13dp"
+        android:text="Button" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/priceTextEdit"
+        android:layout_width="248dp"
+        android:layout_height="58dp"
+        android:layout_below="@+id/button2"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="150dp"
+        android:hint="@string/costText"
+        android:textColorHint="#757575" />
+
 
 </RelativeLayout>
